<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".City_Information">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:background="@color/white"
        >
        
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView5"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@android:color/transparent"
            android:backgroundTint="@android:color/transparent"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                app:shapeAppearance="@style/Widget.MaterialComponents.ShapeableImageView.Corners"
                app:srcCompat="@drawable/ouidah" />
            
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                
                <androidx.cardview.widget.CardView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:cardCornerRadius="48dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                    
                    <ImageView
                        android:id="@+id/adapterflipper_fav"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_baseline_favorite_24"
                        android:contentDescription="@string/todo"
                        tools:ignore="ContentDescription" />
                </androidx.cardview.widget.CardView>
                
                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                    app:tint="@color/white"
                    android:contentDescription="@string/todo"
                    tools:ignore="ContentDescription" />
                
                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:fontFamily="@font/lato_black"
                    android:text="@string/ouidah"
                    android:textColor="@color/bisque"
                    android:textSize="28sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                
                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:fontFamily="@font/lato_bold"
                    android:text="Musée d'histoire de Ouidah"
                    android:textColor="@color/Rust"
                    android:textSize="22sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7"
                    tools:ignore="HardcodedText" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        
        
        </androidx.cardview.widget.CardView>
    
        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="#1E88E5"
            android:elevation="20dp"
            android:fontFamily="@font/lato_black"
            android:outlineAmbientShadowColor="#1E88E5"
            android:outlineSpotShadowColor="#1E88E5"
            android:text="@string/localiser_ce_lieu_sur_google_maps"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView5"
            tools:ignore="UnusedAttribute" />
    
        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/lato_black"
            android:text="@string/jours_de_visites"
            android:textColor="#43A047"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/button" />
        
        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/lato_black"
            android:text="@string/collection_c_l_bres"
            android:textColor="#E53935"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />
        
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="#4A4A4A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />
        
        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="#4A4A4A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
        
        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/lato_black"
            android:text="@string/principales_collections"
            android:textColor="#000000"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/view" />
        
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView12">
        
        </androidx.recyclerview.widget.RecyclerView>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/recyclerView"
            app:layout_constraintStart_toStartOf="@+id/recyclerView"
            app:layout_constraintTop_toBottomOf="@+id/view2">
            
            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="2"
                android:background="#D81B60"
                android:fontFamily="@font/lato_black"
                android:text="@string/restaurants"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:cornerRadius="10dp"
                app:icon="@drawable/ic_baseline_restaurant_menu_24"
                style="?android:attr/buttonBarButtonStyle" />
            
            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="2"
                android:background="#43A047"
                android:fontFamily="@font/lato_black"
                android:text="@string/hotels"
                android:textAllCaps="false"
                android:textSize="18sp"
                app:cornerRadius="10dp"
                app:icon="@drawable/ic_baseline_hotel_24"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>