<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    
            <ImageView
                android:id="@+id/adapterflipper_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ganvie"
                android:contentDescription="@string/todo"
                tools:ignore="ContentDescription" />
    
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="#80FFFFF"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/adapterflipper_image"
                tools:layout_editor_absoluteX="16dp"
                android:baselineAligned="false">
    
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
        
                    <androidx.cardview.widget.CardView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="right"
                        android:layout_marginEnd="16dp"
                        app:cardCornerRadius="15dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">
    
                        <ImageView
                            android:id="@+id/adapterflipper_fav"
                            android:layout_width="32dp"
                            android:layout_height="45dp"
                            android:layout_gravity="center"
                            app:srcCompat="@drawable/ic_baseline_favorite_24"
                            android:contentDescription="@string/todo"
                            tools:ignore="ContentDescription" />
                    </androidx.cardview.widget.CardView>
        
                    <TextView
                        android:id="@+id/adapterflipper_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="24dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/lato_black"
                        android:text="@string/le_village_lacuste_de_ganvi"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
        
                    <TextView
                        android:id="@+id/adapterflipper_state"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/march_anim"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/adapterflipper_name"
                        app:layout_constraintTop_toBottomOf="@+id/adapterflipper_name" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>